Added documentation on how to run the program